Update visuals assets paths
Update visuals assets paths in feudalis-sheet.html & feudalis-styles.css

--- a/feudalis-sheet.html
+++ b/feudalis-sheet.html
@@ -21,7 +21,6 @@
             <div class="column-1 avatarbanner">
                 <div class="avatar">
                     <img class="avatarimage" name="attr_character_avatar" alt="Character Avatar">
-                    <!-- <img class="avatarframe" src="https://i.imgur.com/CWWSMSr.png"> -->
                 </div>
             </div>
             <div class="column-2">
@@ -580,7 +579,7 @@
     <div class="sheet-rolltemplate-feudalis-background sheet-rolltemplate-feudalis-center">
         <div class="sheet-rolltemplate-feudalis-center sheet-rolltemplate-feudalis-header">
             {{title}}
-            <img src="https://i.imgur.com/wfudMJv.jpg" class="roll-separator" alt="" >
+            <img src="rolltemplate-bar250.jpg" class="roll-separator" alt="" >
         </div>
     
             
